2009-10-15  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

Reviewed by Gustavo Noronha.

        https://bugs.webkit.org/show_bug.cgi?id=30353

        Fix race condition, leading to a deadlock

        * platform/graphics/gtk/VideoSinkGStreamer.cpp:
        (webkit_video_sink_timeout_func):
        (webkit_video_sink_render):
        (unlock_buffer_mutex):
        (webkit_video_sink_unlock):
        (webkit_video_sink_unlock_stop):
        (webkit_video_sink_stop):
        (webkit_video_sink_start):
        (webkit_video_sink_class_init):
        Fix race condition in unlock/render that would lead to deadlocks.

Canonical link: https://commits.webkit.org/41087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49623 268f45cc-cd09-0410-ab3c-d52691b4dbfc